@startuml

title __EQUIPE's Class Diagram__\n

    namespace equipe {
      class equipe.EqBataillon {
          + EqBataillon()
          + EqBataillon()
      }
    }
  

    namespace equipe {
      class equipe.EqPecheur {
          + EqPecheur()
          + EqPecheur()
      }
    }
  

    namespace equipe {
      abstract class equipe.Equipe {
          # ident : int
          # listeNavire : Vector<Navire>
          - rd : Random
          - sc : Scanner
          + Equipe()
          + addNavire()
          + getCommande()
          + getId()
          + getListeNavire()
          + getNature()
          + getStatut()
          + interrogationParClavier()
          + isPerdu()
          + setStatut()
          + tirageAleatoire()
          + toString()
      }
    }
  

  equipe.EqBataillon -up-|> equipe.Equipe
  equipe.EqPecheur -up-|> equipe.Equipe
  equipe.Equipe .up.|> joueur.Humain
  equipe.Equipe .up.|> joueur.Ia
  equipe.Equipe o-- tools.Couleur : couleur
  equipe.Equipe o-- manager.Commande : myCommande
  equipe.Equipe o-- tools.Nature : myNature
  equipe.Equipe o-- tools.Statut : myStatut


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
